# fantasy-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
nfl_scraper/: league_372821.json  main.py  pyproject.toml
nfl_scraper/my_fantasy/: __init__.py
nfl_scraper/nfl/: __init__.py  user_login.py
nfl_scraper/nfl_scraper/: __init__.py  main.py  nfl_models.py  user_login.py
nfl_scraper/tests/: test_nfl_scraper.py
nfl_scraper/utils/: __init__.py  ff_models.py
src/nfl_scraper/: main.py
src/nfl_scraper/my_fantasy/: __init__.py  league_scrape.py
src/nfl_scraper/nfl/: __init__.py  user_login.py
src/nfl_scraper/utils/: __init__.py  _compat.py
tests/: test_nfl_scraper.py
